Added functionality to buttons, renamed css classes.

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -374,15 +374,15 @@
 	background-image: url('~assets/icons/flee.svg');
 }
 
-.button#musicpause {
+.button#pause-track {
 	background-image: url('~assets/icons/audio/pause.svg');
 }
 
-.button#previous {
+.button#previous-track {
 	background-image: url('~assets/icons/audio/back.svg');
 }
 
-.button#next {
+.button#next-track {
 	background-image: url('~assets/icons/audio/next.svg');
 }
 
